tests/ui/const-generics/issues/issue-74255.min.stderr
error: `IceEnum` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74255.rs:18:31
   |
LL |     fn ice_struct_fn<const I: IceEnum>() {}
   |                               ^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error: aborting due to 1 previous error

